Fixed build error due to API changes.
  * ovsdb changed the tyoe for OpenFlow port number to integer.
  * openflowplugin changed the revision of flow-capable-transaction
    YANG module.

Change-Id: Ibe0c42cb9639432751fa9d8e7b5e5fd7dd6e0669
Signed-off-by: Shigeru Yasuda <s-yasuda@da.jp.nec.com>